src/test/ui/span/issue-35987.stderr
error[E0404]: expected trait, found type parameter `Add`
  --> $DIR/issue-35987.rs:15:21
   |
LL | impl<T: Clone, Add> Add for Foo<T> {
   |                     ^^^ not a trait
help: possible better candidate is found in another module, you can import it into scope
   |
LL | use std::ops::Add;
   |

error[E0223]: ambiguous associated type
  --> $DIR/issue-35987.rs:19:32
   |
LL |     fn add(self, rhs: Self) -> Self::Output {
   |                                ^^^^^^^^^^^^ ambiguous associated type
   |
   = note: specify the type using the syntax `<Foo<T> as Trait>::Output`

error: aborting due to 2 previous errors

Some errors occurred: E0223, E0404.
For more information about an error, try `rustc --explain E0223`.
